--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # =============== Maven ===============
 /target/
+target/
 !.mvn/wrapper/maven-wrapper.jar
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.properties
