--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,6 +53,20 @@
             <version>${springdoc.version}</version>
         </dependency>
 
+        <!-- WebClient pour appeler l'API Spotify (token, play, etc.) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <version>3.2.4</version>
+        </dependency>
+
+        <!-- (Optionnel) Si tu veux parser manuellement du JSON plus tard -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
